--- a/Photon-Tinker/Base.lproj/Main.storyboard
+++ b/Photon-Tinker/Base.lproj/Main.storyboard
@@ -499,14 +499,14 @@
                                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="center" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fnz-AA-GQf">
                                                         <rect key="frame" x="4" y="4" width="552" height="480"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                                        <string key="text">Welcome To Tinker!
+                                                        <mutableString key="text">Welcome To Tinker!
 
 Tinker is the fastest and easiest way to prototype and play with your Particle device.
 
 You can access the basic input/output functions of the device without writing a line of code.
 
 Tap any pin to get started, select a pin function and tinker with the value. Hold a pin to reset its function. Start with pin D7 - select digitalWrite - blink the attached LED.  For more information visit: docs.particle.io/photon/tinker/
- Enjoy!</string>
+ Enjoy!</mutableString>
                                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                         <fontDescription key="fontDescription" name="Gotham-Book" family="Gotham" pointSize="15"/>
                                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -711,6 +711,13 @@ Tap any pin to get started, select a pin function and tinker with the value. Hol
                                             <constraint firstAttribute="trailing" secondItem="3P4-zn-2e7" secondAttribute="trailing" id="jSE-xG-OyZ"/>
                                         </constraints>
                                     </view>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imgCircle" translatesAutoresizingMaskIntoConstraints="NO" id="7hz-fq-iNb">
+                                        <rect key="frame" x="544" y="8" width="16" height="16"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="16" id="QzB-5Y-T5a"/>
+                                            <constraint firstAttribute="height" constant="16" id="Xo6-Dt-Gvf"/>
+                                        </constraints>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -719,7 +726,9 @@ Tap any pin to get started, select a pin function and tinker with the value. Hol
                                     <constraint firstItem="9rh-mq-4bk" firstAttribute="top" secondItem="9tl-K2-82X" secondAttribute="top" id="LVj-8G-EVw"/>
                                     <constraint firstItem="HPv-oK-mru" firstAttribute="top" secondItem="9rh-mq-4bk" secondAttribute="bottom" id="Mkj-vd-dMN"/>
                                     <constraint firstItem="9rh-mq-4bk" firstAttribute="leading" secondItem="9tl-K2-82X" secondAttribute="leading" constant="20" id="NMh-DY-19g"/>
+                                    <constraint firstAttribute="trailing" secondItem="7hz-fq-iNb" secondAttribute="trailing" id="Ncd-hY-dtq"/>
                                     <constraint firstAttribute="trailing" secondItem="9rh-mq-4bk" secondAttribute="trailing" constant="20" id="Uxk-eq-vfk"/>
+                                    <constraint firstItem="7hz-fq-iNb" firstAttribute="top" secondItem="9tl-K2-82X" secondAttribute="top" constant="8" id="jAn-E8-S0q"/>
                                     <constraint firstAttribute="bottom" secondItem="HPv-oK-mru" secondAttribute="bottom" id="miP-KZ-c1q"/>
                                     <constraint firstAttribute="centerX" secondItem="9rh-mq-4bk" secondAttribute="centerX" id="zVy-E1-VxR"/>
                                 </constraints>
@@ -770,6 +779,7 @@ Tap any pin to get started, select a pin function and tinker with the value. Hol
                     <connections>
                         <outlet property="chipView" destination="HPv-oK-mru" id="jix-yd-G6j"/>
                         <outlet property="deviceNameLabel" destination="9rh-mq-4bk" id="ynf-M8-EkI"/>
+                        <outlet property="deviceStateIndicatorImageView" destination="7hz-fq-iNb" id="9BL-cb-AvB"/>
                         <outlet property="deviceView" destination="9tl-K2-82X" id="hD8-Em-bdH"/>
                         <outlet property="firstTimeView" destination="3P4-zn-2e7" id="9iQ-i4-Ut4"/>
                         <outlet property="pinFunctionView" destination="cp9-M3-Ao7" id="ue2-CL-pyP"/>
@@ -1221,10 +1231,10 @@ Tap any pin to get started, select a pin function and tinker with the value. Hol
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="472"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ECO-4v-GVj" userLabel="copyDeviceIdButton">
-                                        <rect key="frame" x="548" y="17" width="32" height="32"/>
+                                        <rect key="frame" x="554" y="20" width="26" height="26"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="32" id="WzA-6g-dCF"/>
-                                            <constraint firstAttribute="width" constant="32" id="ZVs-uw-1T8"/>
+                                            <constraint firstAttribute="height" constant="26" id="WzA-6g-dCF"/>
+                                            <constraint firstAttribute="width" constant="26" id="ZVs-uw-1T8"/>
                                         </constraints>
                                         <color key="tintColor" red="0.14901960784313725" green="0.59607843137254901" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
                                         <state key="normal" image="imgCopyToClipboard"/>
@@ -1233,10 +1243,10 @@ Tap any pin to get started, select a pin function and tinker with the value. Hol
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GHE-qn-8qb" userLabel="copyDeviceIccidButton">
-                                        <rect key="frame" x="548" y="140" width="32" height="32"/>
+                                        <rect key="frame" x="554" y="143" width="26" height="26"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="32" id="Bxb-82-ngf"/>
-                                            <constraint firstAttribute="width" constant="32" id="bHF-PZ-25y"/>
+                                            <constraint firstAttribute="height" constant="26" id="Bxb-82-ngf"/>
+                                            <constraint firstAttribute="width" constant="26" id="bHF-PZ-25y"/>
                                         </constraints>
                                         <color key="tintColor" red="0.14901960784313725" green="0.59607843137254901" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
                                         <state key="normal" image="imgCopyToClipboard"/>
@@ -1281,7 +1291,7 @@ Tap any pin to get started, select a pin function and tinker with the value. Hol
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="b4ca4ca75ac67882872a67bcb98a" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="76C-HE-Mrc">
-                                        <rect key="frame" x="120" y="24" width="420" height="18"/>
+                                        <rect key="frame" x="120" y="24" width="426" height="18"/>
                                         <fontDescription key="fontDescription" name="FiraMono-Regular" family="Fira Mono" pointSize="15"/>
                                         <color key="textColor" red="0.14901960780000001" green="0.14901960780000001" blue="0.14901960780000001" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -2061,7 +2071,7 @@ Tap any pin to get started, select a pin function and tinker with the value. Hol
                                                     <color key="tintColor" red="0.73333333329999995" green="0.73333333329999995" blue="0.73333333329999995" alpha="1" colorSpace="calibratedRGB"/>
                                                     <state key="normal" image="imgRightChevron"/>
                                                 </button>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Particle App" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p8w-6I-DJw" userLabel="Help Name Label">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Particle App" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p8w-6I-DJw" userLabel="Help Name Label">
                                                     <rect key="frame" x="16" y="14" width="105" height="17"/>
                                                     <color key="tintColor" red="0.87843137250000003" green="0.41568627450000001" blue="0.039215686270000001" alpha="1" colorSpace="calibratedRGB"/>
                                                     <fontDescription key="fontDescription" name="Gotham-Book" family="Gotham" pointSize="17"/>
